fieldx/tests/uncompilable/1.80/unused_builder.stderr
error: method `foo` is never used
 --> tests/uncompilable/unused_builder.rs
  |
  | #[fxstruct(builder)]
  | ------------------ method in this implementation
...
  |         builder(attributes_fn(deny(dead_code)))
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
note: the lint level is defined here
 --> tests/uncompilable/unused_builder.rs
  |
  |         builder(attributes_fn(deny(dead_code)))
  |                                    ^^^^^^^^^
